Added dynamic menu.

--- a/core/apps.json
+++ b/core/apps.json
@@ -1,7 +1,8 @@
 {
     "apps": [
-        "error",
+        "about",
         "dashboard",
+        "error",
         "index",
         "license"
     ]
