--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "js-logger": "^1.4.1",
+    "jsdoc": "^3.5.5",
     "semantic-ui": "^2.2.13",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
@@ -32,7 +33,7 @@
     "type": "git",
     "url": "git+https://github.com/dabamos/openadms-ui.git"
   },
-  "author": "",
+  "author": "Philipp Engel",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/dabamos/openadms-ui/issues"
