--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "js-logger": "^1.4.1",
     "jquery": "^3.2.1",
     "underscore": "^1.8.3",
-    "semantic-ui": "^2.2.13",
-    "webpack": "^3.8.1"
+    "semantic-ui": "^2.2.13"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -18,15 +17,12 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "imports-loader": "^0.7.1",
-    "jquery": "^3.2.1",
-    "js-logger": "^1.4.1",
-    "jsdoc": "^3.5.5",
-    "semantic-ui": "^2.2.13",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "webpack": "^3.8.1"
   },
   "scripts": {
-    "build": "webpack -p"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
