--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/openadms-ui.js",
   "dependencies": {
     "backbone": "^1.3.3",
-    "js-logger": "^1.4.1",
     "jquery": "^3.2.1",
-    "underscore": "^1.8.3",
-    "semantic-ui": "^2.2.13"
+    "js-logger": "^1.4.1",
+    "semantic-ui": "^2.2.13",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -17,6 +17,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "imports-loader": "^0.7.1",
+    "jsdoc": "^3.5.5",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "webpack": "^3.8.1"
