--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/openadms-ui.js",
   "dependencies": {
     "backbone": "^1.3.3",
+    "backbone.localstorage": "^2.0.2",
     "jquery": "^3.2.1",
     "js-logger": "^1.4.1",
     "semantic-ui": "^2.2.13",
@@ -14,13 +15,13 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
+    "css-loader": "^0.28.8",
+    "file-loader": "^1.1.6",
     "imports-loader": "^0.7.1",
     "jsdoc": "^3.5.5",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "webpack": "^3.8.1"
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "build": "webpack"
