--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/openadms-ui.js",
   "dependencies": {
     "backbone": "^1.3.3",
-    "backbone.localstorage": "^2.0.2",
     "jquery": "^3.2.1",
     "js-logger": "^1.4.1",
+    "pouchdb": "^6.4.1",
     "semantic-ui": "^2.2.13",
     "underscore": "^1.8.3"
   },
@@ -19,6 +19,7 @@
     "file-loader": "^1.1.6",
     "imports-loader": "^0.7.1",
     "jsdoc": "^3.5.5",
+    "node-gyp": "^3.6.2",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0"
