--- a/package.json
+++ b/package.json
@@ -5,27 +5,31 @@
   "main": "src/openadms-ui.js",
   "dependencies": {
     "backbone": "^1.3.3",
-    "jquery": "^3.2.1",
-    "js-logger": "^1.4.1",
-    "pouchdb": "^6.4.1",
-    "semantic-ui": "^2.2.13",
-    "underscore": "^1.8.3"
+    "backbone-forms": "^0.14.1",
+    "backbone.localstorage": "^2.0.2",
+    "jquery": "^3.3.1",
+    "js-logger": "^1.6.0",
+    "plotly.js-basic-dist": "^1.42.0",
+    "pouchdb": "^6.4.3",
+    "pouchdb-authentication": "^1.1.3",
+    "semantic-ui": "^2.4.2",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.8",
-    "file-loader": "^1.1.6",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "imports-loader": "^0.7.1",
     "jsdoc": "^3.5.5",
-    "node-gyp": "^3.6.2",
+    "node-gyp": "^3.8.0",
     "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0"
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^3.12.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --display-error-details"
   },
   "repository": {
     "type": "git",
